# not_a_blog

./: .env-example  Cargo.toml  README.md
migrations/2022-04-17-235356_create_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/app/: mod.rs
src/app/controller/: base.rs
src/app/lib/: logger.rs
src/app/server/: cfg.rs  mod.rs
src/db/: pg.rs
